Apply the given template, switched to maven.